# L-Systems

./: .gitignore  README.md  main.py  pyproject.toml  shapes.py
other/: stochastic.py
src/lsys/: lsys.py  templates.py
src/lsys/methods/: stochastic.py
